<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eclass">
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="216dp"
        android:background="@drawable/rectangle_2"
        />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="495dp"
        android:background="@drawable/rectangle_3" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="195dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/eclass_logo" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image" />

    <Button
        android:id="@+id/logout"
        android:background="@drawable/custom_button2"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@null"
        android:text="@string/log_out"
        android:textAppearance="@style/log_out"
        android:includeFontPadding="false"
        android:fontFamily="@font/notosan_bold"
        android:onClick="click_logout"
        />

    <Button
        android:id="@+id/menu"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="310dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/menu_all" />

    <TextView
        android:id="@+id/myclass"
        android:layout_width="79dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="center_horizontal|top"
        android:includeFontPadding="false"
        android:text="@string/myclass"
        android:textAppearance="@style/eclass1" />

    <TextView
        android:id="@+id/db"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="290dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="left"
        android:includeFontPadding="false"
        android:text="@string/db"
        android:textAppearance="@style/eclass2" />

    <TextView
        android:id="@+id/ai"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="330dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="left"
        android:includeFontPadding="false"
        android:text="@string/ai"
        android:textAppearance="@style/eclass2" />

    <TextView
        android:id="@+id/algo"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="370dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="left"
        android:includeFontPadding="false"
        android:text="@string/algo"
        android:textAppearance="@style/eclass2" />

    <TextView
        android:id="@+id/com"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="410dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="left"
        android:includeFontPadding="false"
        android:text="@string/com"
        android:textAppearance="@style/eclass2" />

    <Button
        android:id="@+id/classroom1"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="256dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/custom_button2"
        android:backgroundTint="@null"
        android:fontFamily="@font/notosan_bold"
        android:includeFontPadding="false"
        android:text="@string/classroom"
        android:textAppearance="@style/eclass3" />

    <Button
        android:id="@+id/classroom2"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="256dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/custom_button2"
        android:backgroundTint="@null"
        android:fontFamily="@font/notosan_bold"
        android:includeFontPadding="false"
        android:text="@string/classroom"
        android:textAppearance="@style/eclass3" />

    <Button
        android:id="@+id/classroom3"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="256dp"
        android:layout_marginTop="370dp"
        android:background="@drawable/custom_button2"
        android:backgroundTint="@null"
        android:fontFamily="@font/notosan_bold"
        android:includeFontPadding="false"
        android:text="@string/classroom"
        android:textAppearance="@style/eclass3" />

    <Button
        android:id="@+id/classroom4"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="256dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/custom_button2"
        android:backgroundTint="@null"
        android:fontFamily="@font/notosan_bold"
        android:includeFontPadding="false"
        android:text="@string/classroom"
        android:textAppearance="@style/eclass3" />

    <TextView
        android:id="@+id/notice"
        android:layout_width="79dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="530dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="center_horizontal|top"
        android:includeFontPadding="false"
        android:text="@string/notice"
        android:textAppearance="@style/eclass1" />

    <TextView
        android:id="@+id/noticetext"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="570dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="left"
        android:includeFontPadding="false"
        android:text="@string/noticetext"
        android:textAppearance="@style/eclass4" />

</RelativeLayout>