<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_page"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/main_page">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/rectangle_1" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="425dp"
        android:background="@drawable/rectangle_1" />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/logout_o"
        android:background="@drawable/custom_button"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@null"
        android:text="@string/log_out"
        android:textAppearance="@style/log_out"
        android:includeFontPadding="false"
        android:fontFamily="@font/notosan_bold"
        android:onClick="click_logout"
        />

    <Button
        android:id="@+id/menu"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="310dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/menu_all" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image" />

    <ImageView
        android:id="@+id/schedule"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/schedule" />

    <ImageView
        android:id="@+id/eclass_button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="250dp"
        android:onClick="onClick"
        android:src="@drawable/eclass_button" />

    <ImageView
        android:id="@+id/library"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="310dp"
        android:src="@drawable/library" />

    <ImageView
        android:id="@+id/dgu_pass"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="310dp"
        android:src="@drawable/dgupass_button" />

    <ImageView
        android:id="@+id/dep_notice"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="370dp"
        android:src="@drawable/dep_notice" />

    <ImageView
        android:id="@+id/timetable_button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="370dp"
        android:src="@drawable/timetable_button" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="435dp"
        android:checkedButton="@+id/buttonAll"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/buttonAll"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:background="@drawable/notice_button"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/notosan_bold"
            android:includeFontPadding="false"
            android:text="전체"
            android:textAlignment="center"
            android:textColor="@drawable/notice_text" />

        <RadioButton
            android:id="@+id/buttonGeneral"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:background="@drawable/notice_button"
            android:button="@null"
            android:fontFamily="@font/notosan_bold"
            android:includeFontPadding="false"
            android:text="일반"
            android:textAlignment="center"
            android:textColor="@drawable/notice_text" />

        <RadioButton
            android:id="@+id/buttonAcademics"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:background="@drawable/notice_button"
            android:button="@null"
            android:fontFamily="@font/notosan_bold"
            android:includeFontPadding="false"
            android:text="학사"
            android:textAlignment="center"
            android:textColor="@drawable/notice_text" />

        <RadioButton
            android:id="@+id/buttonScholarship"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:background="@drawable/notice_button"
            android:button="@null"
            android:fontFamily="@font/notosan_bold"
            android:includeFontPadding="false"
            android:text="장학"
            android:textAlignment="center"
            android:textColor="@drawable/notice_text" />
    </RadioGroup>

    <ImageView
        android:id="@+id/noticeImageView"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="470dp"
        android:src="@drawable/notice_all" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="645dp"
        android:src="@drawable/home" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="285dp"
        android:layout_marginTop="645dp"
        android:onClick="onClick"
        android:src="@drawable/setting" />

    <ImageView
        android:id="@+id/user_square"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="645dp"
        android:onClick="onClick"
        android:src="@drawable/user_square" />

    <TextView
        android:id="@+id/hometext"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_below="@+id/home"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/hometext"
        android:textAppearance="@style/hometext" />

    <TextView
        android:id="@+id/studentcard"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_below="@+id/user_square"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="277dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="center_horizontal|top"
        android:includeFontPadding="false"
        android:text="@string/studentcard"
        android:textAppearance="@style/studentcard" />

    <TextView
        android:id="@+id/settingtext"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_below="@+id/setting"
        android:layout_alignParentStart="true"
        android:layout_marginStart="277dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/notosan_bold"
        android:gravity="center_horizontal|top"
        android:includeFontPadding="false"
        android:text="@string/settingtext"
        android:textAppearance="@style/settingtext" />

</RelativeLayout>